--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: nginx
 spec:
@@ -8,3 +8,6 @@ spec:
     image: nginx
     port:
     - containerPort: 80 
+
+
+
