--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
+  Namespace: roboshop
+  labels:
+    environment: development
+    project: roboshop
 spec:
   containers:
   - name: nginx
