--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginx
   Namespace: roboshop
   labels:
-    environment: development
+    name: nginx
     project: roboshop
 spec:
   containers:
