--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
-  Namespace: roboshop
+  namespace: roboshop
   labels:
     name: nginx
     project: roboshop
@@ -12,8 +12,5 @@ spec:
     image: nginx
     ports:
     - containerPort: 80 
-
-    
-
 
 
