--- a/05-errors.yaml
+++ b/05-errors.yaml
@@ -6,5 +6,5 @@ spec:
   containers:
   - name: nginx
     image: ngidddddd
-  - name: almalinux
-    image: almalinux:9  
+  # - name: almalinux
+  #   image: almalinux:9  
