--- a/13-services.yaml
+++ b/13-services.yaml
@@ -8,7 +8,7 @@ spec:
     component: frontend
     environment: dev
   ports:
-  - port: TCP
+  - protocol: TCP
     service: 80
     targetPort: 80
-    
+  
