--- a/13-services.yaml
+++ b/13-services.yaml
@@ -7,8 +7,8 @@ spec:
     project: roboshop
     component: frontend
     environment: dev
-    ports:
+  ports:
     - protocol: TCP
-      service: 80
+      port: 80
       targetPort: 80
   
