services-node-port

--- a/14-pod-service.yaml
+++ b/14-pod-service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     project: roboshop
     component: frontend
-    environment: Dev
+    environment: dev
 spec:    
   containers:
   -  name: nginx
