--- a/16-pod-service-np.yaml
+++ b/16-pod-service-np.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     project: roboshop
     component: frontend
-    environment: Dev
+    environment: dev
     purpose: node-port
 spec:    
   containers:
